@@ -1,6 +1,8 @@
 git-annex (6.20160528) UNRELEASED; urgency=medium
 
   * Improve SHA*E extension extraction code.
+  * Windows: Avoid terminating git-annex branch lines with \r\n when
+    union merging and performing transitions.
 
  -- Joey Hess <id@joeyh.name>  Fri, 27 May 2016 13:12:48 -0400
 
